# Hax

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  build_emscripten.sh  hax.data  hax.js  hax.wasm
.github/workflows/: deploy_emscripten.yml  lint.yml
_build/: index.html
lib/glad_gles20/include/glad/: glad.h
lib/glad_gles20/src/: glad.c
src/: color.h  dir.h  graphics.cpp  graphics.h  hax.cpp  hax_data.h  hax_entity_manager.h  hax_globals.h  hax_inputs.h  level.cpp  level.h  logger.h  screen.cpp  screen.h  screen_glfw3.cpp
src/comp/: behavior.h  game_data.h  sprite_position.h  sprite_renderer.h  text_renderer.h  transform.h
src/engine/: core.cpp  core.h  game.cpp  game.h  logger.h  main.cpp  real.h
src/engine/graphics/: color.h  font.cpp  font.h  font_quad.h  graphics.cpp  graphics.h  input.cpp  input.h  key.h  level.cpp  level.h  mouse_button.h  pixmap.cpp  pixmap.h  screen.cpp  screen.h  texture.cpp  texture.h  viewer.h
src/engine/graphics/internal/: context_driver.h  context_driver_glfw.cpp  geom.cpp  graphics_driver.h  graphics_driver_gles2.cpp  shader.cpp  shader.h  vertex.h
src/engine/math/: mat4.h  quat.h  vec2.h  vec3.h  vec4.h
src/engine/maze/: direction.cpp  graph.h
src/graphics/: core.cpp  core.h  font.cpp  font.h  graphics.cpp  graphics.h  input.cpp  input.h  screen.cpp  screen.h  texture.cpp  texture.h
src/graphics/internal/: geom.cpp  geom.h  graphics_driver.h  graphics_driver_gles2.cpp  shader.cpp  shader.h  vertex.h
src/math/: mat4.h  quat.h  vec3.h
src/maze/: direction.h  generator.h  graph.cpp  graphnode.cpp  graphnode.h
src/ngn/: core.cpp  core.h  entity_manager.h  game.cpp  game.h  logger.h  main.cpp  non_owning_ptr.h
src/ngn/_prv/: context_driver.h  context_driver_glfw.cpp  geom.cpp  geom.h  graphics_driver.h  graphics_driver_gles2.cpp  shader.cpp  shader.h  vertex.h
src/ngn/gfx/: color.h  font.cpp  font.h  font_quad.h  geom.cpp  geom.h  graphics.cpp  graphics.h  level.h  pixmap.cpp  pixmap.h  screen.cpp  screen.h  texture.cpp  texture.h  vertex.h  viewer.h
src/ngn/gfx/_internal/: context_driver.h  graphics_driver.h  shader.h  vertex.h
src/ngn/io/: input.cpp  input.h  key.h  mouse_button.h
src/ngn/maze/: generator.cpp
src/ngn/mth/: mat4.h  quat.h  real.h  vec2.h  vec3.h  vec4.h
src/prefab/: enemy.h  game.h  player.h
